Add new Activity endpoint; add interal entities and mappers

AI-tool: GitHub Copilot
AI-use: help creating unit tests
