# backend/cmd/main.go
@@ -30,6 +30,10 @@ func SetupRouter() *gin.Engine {
 	intervalService := app.NewIntervalService(intervalRepo)
 	intervalHandler := handler.NewIntervalHandler(intervalService)
 
+	activityRepo := repository.NewActivityRepository(db)
+	activityService := app.NewActivityService(activityRepo, intervalRepo)
+	activityHandler := handler.NewActivityHandler(activityService)
+
 	router := gin.Default()
 
 	// Swagger route
@@ -42,6 +46,10 @@ func SetupRouter() *gin.Engine {
 	router.GET("/users/:id", userHandler.GetUserByID)
 	router.PUT("/users/:id", userHandler.UpdateUser)
 	router.DELETE("/users/:id", userHandler.DeleteUser)
+
+	// Activity routes
+	router.POST("/activities", activityHandler.CreateActivity)
+	router.GET("/users/:id/activities", activityHandler.GetActivitiesByUser)
 
 	// Interval routes
 	router.POST("/intervals", intervalHandler.CreateInterval)
